--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,14 +1,16 @@
 #form-container {
-  padding: 370px;
   background-image: url('/form_background.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  padding: 212px;
 }
 
 #form-wrapper {
   display: flex;
-  border: 9px solid #FFFFFF;
+  width: 1112px;
+  border: 9px solid #b3b3b3;
+  margin: 0 auto;
 }
 
 .form-heading {
@@ -19,6 +21,7 @@
 #info-container {
     height: 323px;
     width: 506px;
+    margin: 67px 25px 125px 57px;
 }
 
 form {
@@ -26,17 +29,26 @@ form {
   height: 448px;
   display: flex;
   row-gap: 16px;
+  margin: 67px 50px 100px 25px;
   flex-direction: column;
   justify-content: space-between;
 }
 
+#heading-1 {
+  margin: 0 0 15px 0;
+}
+
 input {
   height: 38px;
+  background-color: #FFFFFF;
+  color: black;
 }
 
 textarea {
   resize: none;
   height: 506px;
+  background-color: #FFFFFF;
+  color: black;
 }
 
 #form-wrapper form input,
