--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -124,8 +124,15 @@
   -webkit-text-fill-color: transparent;
 }
 
+.nav-link:hover {
+  background: linear-gradient(270deg, #C69 30%, #FBAB28 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .nav-underline {
-  width: 46px;
+  width: 100%;
   height: 2px;
   position: relative;
   left: 1px;
