--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,8 +18,7 @@
 
 .footer-inner-container {
   display: flex;
-  width: 1300px;
-  max-width: 1920px;
+  width: 100%;
   padding: 0 50px;
   flex-direction: column;
   align-items: flex-start;
