--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -155,5 +155,15 @@
   background: linear-gradient(270deg, #C69 30%, #FBAB28 100%);
 }
 
+.nav-link-active {
+  width: 100%;
+  height: 2px;
+  position: relative;
+  left: 1px;
+  bottom: -6px;
+  opacity: 0.85;
+  background: linear-gradient(270deg, #C69 30%, #FBAB28 100%);
+}
+
 
 
